--- a/Final-Report/Final_Report.ipynb
+++ b/Final-Report/Final_Report.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Final_Report.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuQonTDEE7fpiX5ArnIskl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/shankha2018/UndErNsembled/blob/master/Final-Report/Final_Report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/disha2sinha/UndErNsembled/blob/master/Final-Report/Final_Report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,22 +31,22 @@
           "height": 195
         },
         "id": "67MMoyVDRAHX",
-        "outputId": "4a058f11-48c8-42a0-e12d-25f31956c3c1"
+        "outputId": "3d901a0a-4803-484c-c129-8065d4191b06"
       },
       "source": [
-        "import pandas as pd\r\n",
-        "report = {\r\n",
-        "    \"Classifier_Model\":[\"KNN\",\"Logistic Regression\",\"Decision Tree\",\"SVM\",\"Random Forest\"],\r\n",
-        "    \"Accuracy%(Imbalanced)\":[85.5,87.1,68.8,87.3,81.2],\r\n",
-        "    \"Accuracy%(Balanced)\":[92.2,85.7,78.5,71.4,92.8],\r\n",
-        "    \"Accuracy%_Bagging\":[71.4,85.7,\"NA\",92.8,\"NA\"],\r\n",
-        "    \"Accuracy%_Boosting\":[\"NA\",85.7,71.4,71.4,\"NA\"],\r\n",
-        "    \"Accuracy%_Stacking\":[82.0,88.0,\"NA\",\"NA\",\"NA\"]\r\n",
-        "}\r\n",
-        "report = pd.DataFrame(report)\r\n",
+        "import pandas as pd\n",
+        "report = {\n",
+        "    \"Classifier_Model\":[\"KNN\",\"Logistic Regression\",\"Decision Tree\",\"SVM\",\"Random Forest\"],\n",
+        "    \"Accuracy%(Imbalanced)\":[85.5,87.1,68.8,87.3,81.2],\n",
+        "    \"Accuracy%(Balanced)\":[92.2,85.7,78.5,71.4,92.8],\n",
+        "    \"Accuracy%_Bagging\":[71.4,85.7,\"NA\",92.8,\"NA\"],\n",
+        "    \"Accuracy%_Boosting\":[\"NA\",85.7,71.4,71.4,\"NA\"],\n",
+        "    \"Accuracy%_Stacking\":[82.0,88.0,\"NA\",\"NA\",\"NA\"]\n",
+        "}\n",
+        "report = pd.DataFrame(report)\n",
         "report"
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +142,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 3
         }
       ]
     },
@@ -158,17 +157,17 @@
         "outputId": "74152aa0-a79e-42f6-f43f-cae31199336d"
       },
       "source": [
-        "report.style.set_table_styles( \r\n",
-        "[ \r\n",
-        " {'selector': 'th', \r\n",
-        "  'props': [('background', 'black'),  \r\n",
-        "            ('color', 'white'), ]}, \r\n",
-        " {'selector': 'td', \r\n",
-        "  'props': [('color', 'blue')]}, \r\n",
-        "] \r\n",
+        "report.style.set_table_styles( \n",
+        "[ \n",
+        " {'selector': 'th', \n",
+        "  'props': [('background', 'black'),  \n",
+        "            ('color', 'white'), ]}, \n",
+        " {'selector': 'td', \n",
+        "  'props': [('color', 'blue')]}, \n",
+        "] \n",
         ").hide_index() "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +245,7 @@
       "source": [
         "print(\"Stacking Accuracy: 88.0% \")"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,11 +267,11 @@
         "outputId": "3082a00e-ed5d-488b-9238-b61e56689100"
       },
       "source": [
-        "report.to_csv('Final_report.csv', index = False)\r\n",
-        "from google.colab import files\r\n",
+        "report.to_csv('Final_report.csv', index = False)\n",
+        "from google.colab import files\n",
         "files.download(\"Final_report.csv\")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -341,6 +340,197 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pzgaFVy5lT4K"
+      },
+      "source": [
+        "**COMPARISON REPORT**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6JjsVaxHlTgJ",
+        "outputId": "bbd68533-fda1-4dac-a847-b907efd89a30",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 639
+        }
+      },
+      "source": [
+        "report_colon = {\n",
+        "    \"Classifier_Model\":[\"KNN\",\"BAGGING_KNN\",\"BOOSTING_KNN\",\"STACKING_KNN\",\"Logistic Regression\",\"BAGGING_LR\",\"BOOSTING_LR\",\"STACKING_LR\",\"Decision Tree\",\"BAGGING_DT\",\"BOOSTING_DT\",\"STACKING_DT\",\"SVM\",\"BAGGING_SVM\",\"BOOSTING_SVM\",\"STACKING_SVM\",\"Random Forest\",\"BAGGING_RF\",\"BOOSTING_RF\",\"STACKING_RF\",],\n",
+        "    \"COLON\":[92.2,71.4,'NA',82,85.7,85.7,85.7,88,78.5,'NA',71.4,'NA',71.4,92.8,71.4,'NA',92.8,'NA','NA','NA']\n",
+        "}\n",
+        "report_colon = pd.DataFrame(report_colon)\n",
+        "report_colon"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Classifier_Model</th>\n",
+              "      <th>COLON</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>KNN</td>\n",
+              "      <td>92.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BAGGING_KNN</td>\n",
+              "      <td>71.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>BOOSTING_KNN</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>STACKING_KNN</td>\n",
+              "      <td>82</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Logistic Regression</td>\n",
+              "      <td>85.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>BAGGING_LR</td>\n",
+              "      <td>85.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>BOOSTING_LR</td>\n",
+              "      <td>85.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>STACKING_LR</td>\n",
+              "      <td>88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Decision Tree</td>\n",
+              "      <td>78.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>BAGGING_DT</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>BOOSTING_DT</td>\n",
+              "      <td>71.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>STACKING_DT</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>SVM</td>\n",
+              "      <td>71.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>BAGGING_SVM</td>\n",
+              "      <td>92.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>BOOSTING_SVM</td>\n",
+              "      <td>71.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>STACKING_SVM</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>Random Forest</td>\n",
+              "      <td>92.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>BAGGING_RF</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>BOOSTING_RF</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>STACKING_RF</td>\n",
+              "      <td>NA</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Classifier_Model COLON\n",
+              "0                   KNN  92.2\n",
+              "1           BAGGING_KNN  71.4\n",
+              "2          BOOSTING_KNN    NA\n",
+              "3          STACKING_KNN    82\n",
+              "4   Logistic Regression  85.7\n",
+              "5            BAGGING_LR  85.7\n",
+              "6           BOOSTING_LR  85.7\n",
+              "7           STACKING_LR    88\n",
+              "8         Decision Tree  78.5\n",
+              "9            BAGGING_DT    NA\n",
+              "10          BOOSTING_DT  71.4\n",
+              "11          STACKING_DT    NA\n",
+              "12                  SVM  71.4\n",
+              "13          BAGGING_SVM  92.8\n",
+              "14         BOOSTING_SVM  71.4\n",
+              "15         STACKING_SVM    NA\n",
+              "16        Random Forest  92.8\n",
+              "17           BAGGING_RF    NA\n",
+              "18          BOOSTING_RF    NA\n",
+              "19          STACKING_RF    NA"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
         }
       ]
     }
